# CI3725-SD2014

./: .gitignore  meta.sql
consultas/: 2014-09-21T09_13_32VET-0.mdown  2014-09-21T19_27_07VET-0.mdown  2014-09-23T00_48_56VET-0.mdown  2014-09-25T20_17_22VET-0.mdown  2014-09-25T21_01_51VET-0.mdown  2014-09-25T21_10_54VET-0.mdown  2014-09-26T02_33_28VET-0.mdown  Makefile  consultota.mdown
entrega1/: entrega1.mdown
etapa1/: Makefile  etapa1.mdown
etapa1/pruebas/básicas/: p1.ty  p1.ty.out  p2.ty  p2.ty.out
etapa1/pruebas/david/: c1.ty  c2.ty  c3.ty
etapa2/: etapa2.mdown
etapa2/pruebas/: .gitignore  sentinel  tests
etapa3/: etapa3.mdown  header.tex
etapa4/: etapa4.mdown
etapa4/pruebas/brian/: asig-copy.ty  bool-test.ty  ciclo-infinito.ty  corto-circuito.ty  fibonacci.ty  fibonacci_tailrec.ty  for-shadowing.ty  math.ty  mod-mat.ty  multi-use.ty  no-print.ty  no-return.ty  out-bounds.ty  printer.ty  shadowing.ty  val-copy.ty  welp.ty
lenguaje/: especificación.mdown  header.tex
precedencias/: index.php
trinity/: LICENSE  default.nix  shell.nix  trinity.cabal
trinity/src/: Main.hs
trinity/src/Language/Trinity/: .gitignore  AST.hs  Lexer.x  Parser.y  Trinity.hs
trinity/src/Language/Trinity/Lexer/: Token.hs
